Display date and time of the earthquake.

--- a/app/src/main/res/layout/earthquake_list_item.xml
+++ b/app/src/main/res/layout/earthquake_list_item.xml
@@ -42,4 +42,11 @@
         android:layout_weight="1"
         tools:text="Mar 6, 2010" />
 
+    <TextView
+        android:id="@+id/time"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        tools:text="3:00 PM" />
+
 </LinearLayout>
